--- a/js/plugins/default/plugin.config.json
+++ b/js/plugins/default/plugin.config.json
@@ -7,13 +7,13 @@
     "services": {
         "dir": "-"
     },
-    "admin": [
+    "admin-themes": [
         {
             "directory": "default",
             "start": "theme_interface"
         }
     ],
-    "client": [
+    "client-themes": [
         {
             "directory": "default",
             "start": "theme_interface",
