--- a/plugins/under_construction/plugin.config.json
+++ b/plugins/under_construction/plugin.config.json
@@ -16,7 +16,7 @@
             "directory": "default",
             "start": "theme_interface",
             "head": [
-                "<link rel=\"stylesheet\" type=\"text/css\" class=\"default\" href=\"./js/plugins/default/client/themes/default/styles/css/styles.css\">"
+                "<link rel=\"stylesheet\" type=\"text/css\" href=\"plugins/under_construction/client/themes/default/styles/css/styles.css\">"
             ]
         }
     ]
